# container_plugin

./: .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  falco.yaml  vcpkg.json
.github/workflows/: ci.yml  release.yml  reusable_build.yml
cmake/modules/: arch.cmake  btrfs.cmake  caps.cmake  compiler.cmake  go-worker.cmake  plugin-sdk-cpp.cmake  spdlog.cmake  vcpkg.cmake
go-worker/: Makefile  go.mod  go.sum  main_exe.go  worker.go  worker_api.go
go-worker/pkg/config/: config.go
go-worker/pkg/container/: containerd.go  containerd_test.go  cri.go  cri_test.go  docker.go  docker_test.go  dummy.go  engine.go  fetcher.go  podman.go  podman_test.go  types.go
go-worker/pkg/container/clients/: client.go  docker.go  podman.go
go-worker/pkg/event/: event.go
src/: async.cpp  consts.h  container_info.cpp  container_info.h  container_info_json.cpp  container_type.h  extract.cpp  listening.cpp  macros.h  parse.cpp  plugin.cpp  plugin.h  plugin_config.cpp  plugin_config.h  plugin_config_schema.h  plugin_only_consts.h  shared_with_tests_consts.h  table.cpp  worker.h
src/caps/async/: async.cpp
src/caps/extract/: extract.cpp
src/caps/listening/: listening.cpp
src/caps/parse/: parse.cpp
src/matchers/: bpm.cpp  bpm.h  containerd.cpp  containerd.h  cri.cpp  cri.h  docker.cpp  docker.h  libvirt_lxc.cpp  libvirt_lxc.h  lxc.cpp  lxc.h  matcher.cpp  matcher.h  podman.cpp  podman.h  runc.cpp  runc.h  static_container.cpp  static_container.h
test/: CMakeLists.txt  config.cpp  matchers.cpp
